--- a/config.ini
+++ b/config.ini
@@ -10,8 +10,10 @@
 ;增强国外GFW：支持
 
 ;设置规则标志位
-ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/LocalAreaNetwork.list
-ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/UnBan.list
+ruleset=🎯 全球直连,https://raw.githubusercontent.com/pitfall-a/ruleClash/refs/heads/main/rule/globalDirect.list
+ruleset=Ⓜ️ 微软服务,https://raw.githubusercontent.com/pitfall-a/ruleClash/refs/heads/main/rule/microsoft.list
+ruleset=🛑 全球拦截,https://raw.githubusercontent.com/pitfall-a/ruleClash/refs/heads/main/rule/globalReject.list
+ruleset=🌍 国外媒体,https://raw.githubusercontent.com/pitfall-a/ruleClash/refs/heads/main/rule/globalReject.list
 ruleset=🛑 广告拦截,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanAD.list
 ruleset=🍃 应用净化,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanProgramAD.list
 ruleset=📢 谷歌FCM,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/GoogleFCM.list
