部分直接用公共的,部分用自定义的

--- a/config.ini
+++ b/config.ini
@@ -9,12 +9,12 @@
 ;设置规则标志位
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/pitfall-a/ruleClash/refs/heads/main/rule/globalDirect.list
 ruleset=Ⓜ️ 微软服务,https://raw.githubusercontent.com/pitfall-a/ruleClash/refs/heads/main/rule/microsoft.list
-ruleset=🛑 全球拦截,https://raw.githubusercontent.com/pitfall-a/ruleClash/refs/heads/main/rule/globalReject.list
-ruleset=🌍 国外媒体,https://raw.githubusercontent.com/pitfall-a/ruleClash/refs/heads/main/rule/globalMedia.list
-ruleset=🌏 国内媒体,https://raw.githubusercontent.com/pitfall-a/ruleClash/refs/heads/main/rule/domesticMedia.list
-ruleset=📲 电报信息,https://raw.githubusercontent.com/pitfall-a/ruleClash/refs/heads/main/rule/telegram.list
+ruleset=🛑 广告拦截,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanAD.list
+ruleset=🌍 国外媒体,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyMedia.list
+ruleset=🌏 国内媒体,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaMedia.list
+ruleset=📲 电报信息,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Telegram.list
 ruleset=🔰 节点选择,https://raw.githubusercontent.com/pitfall-a/ruleClash/refs/heads/main/rule/nodeSelect.list
-ruleset=🍎 苹果服务,https://raw.githubusercontent.com/pitfall-a/ruleClash/refs/heads/main/rule/appleServer.list
+ruleset=🍎 苹果服务,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Apple.list
 ruleset=💬 AI,https://raw.githubusercontent.com/pitfall-a/ruleClash/refs/heads/main/rule/LLMServer.list
 ruleset=🇺🇸 美国专属,https://raw.githubusercontent.com/pitfall-a/ruleClash/refs/heads/main/rule/USAexclusive.list
 ruleset=🏫 学校,https://raw.githubusercontent.com/pitfall-a/ruleClash/refs/heads/main/rule/schoolServer.list
@@ -33,7 +33,7 @@ custom_proxy_group=🍎 苹果服务`select`[]🔰 节点选择`[]🎯 全球直
 custom_proxy_group=🇺🇸 美国专属`select`.*美国.*
 custom_proxy_group=🏫 学校`select`[]DIRECT
 custom_proxy_group=🎯 全球直连`select`[]DIRECT
-custom_proxy_group=🛑 全球拦截`select`[]REJECT`[]DIRECT
+custom_proxy_group=🛑 广告拦截`select`[]REJECT`[]DIRECT
 custom_proxy_group=🐟 漏网之鱼`select`[]🔰 节点选择`[]🎯 全球直连`[]♻️ 自动选择`.*`[]DIRECT
 ;设置分组标志位
 
