--- a/config.ini
+++ b/config.ini
@@ -18,7 +18,7 @@ ruleset=🍎 苹果服务,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/mast
 ruleset=💬 AI,https://raw.githubusercontent.com/pitfall-a/ruleClash/refs/heads/main/rule/LLMServer.list
 ruleset=🇺🇸 美国专属,https://raw.githubusercontent.com/pitfall-a/ruleClash/refs/heads/main/rule/USAexclusive.list
 ruleset=🏫 学校,https://raw.githubusercontent.com/pitfall-a/ruleClash/refs/heads/main/rule/schoolServer.list
-ruleset=🐟 漏网之鱼,[]FINAL
+ruleset=🐟 漏网之鱼,https://raw.githubusercontent.com/pitfall-a/ruleClash/refs/heads/main/rule/escapee.list
 ;设置规则标志位
 
 ;设置分组标志位
