--- a/config.ini
+++ b/config.ini
@@ -25,7 +25,7 @@ ruleset=🐟 漏网之鱼,https://raw.githubusercontent.com/pitfall-a/ruleClash/
 custom_proxy_group=🔰 节点选择`select`[]♻️ 自动选择`[]🎯 全球直连`.*`[]DIRECT
 custom_proxy_group=♻️ 自动选择`url-test`.*`http://www.gstatic.com/generate_204`300
 custom_proxy_group=🌍 国外媒体`select`[]🔰 节点选择`[]♻️ 自动选择`[]🎯 全球直连`.*`[]DIRECT
-custom_proxy_group=💬 AI`url-test`.*`http://www.gstatic.com/generate_204`300
+custom_proxy_group=💬 AI`select`[]🔰 节点选择`[]♻️ 自动选择`[]🎯 全球直连`.*`[]DIRECT
 custom_proxy_group=🌏 国内媒体`select`[]🎯 全球直连`[]🔰 节点选择`[]DIRECT
 custom_proxy_group=Ⓜ️ 微软服务`select`[]🎯 全球直连`[]🔰 节点选择`.*`[]DIRECT
 custom_proxy_group=📲 电报信息`select`[]🔰 节点选择`[]🎯 全球直连`[]DIRECT
