Update ruleset URLs to use gh-proxy

--- a/config.ini
+++ b/config.ini
@@ -7,18 +7,18 @@
 ;AI-为非openai的网址
 
 ;设置规则标志位
-ruleset=🎯 全球直连,https://raw.githubusercontent.com/pitfall-a/ruleClash/refs/heads/main/rule/globalDirect.list
-ruleset=Ⓜ️ 微软服务,https://raw.githubusercontent.com/pitfall-a/ruleClash/refs/heads/main/rule/microsoft.list
-ruleset=🛑 广告拦截,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanAD.list
-ruleset=🌍 国外媒体,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyMedia.list
-ruleset=🌏 国内媒体,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaMedia.list
-ruleset=📲 电报信息,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Telegram.list
-ruleset=🔰 节点选择,https://raw.githubusercontent.com/pitfall-a/ruleClash/refs/heads/main/rule/nodeSelect.list
-ruleset=🍎 苹果服务,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Apple.list
-ruleset=💬 AI,https://raw.githubusercontent.com/pitfall-a/ruleClash/refs/heads/main/rule/LLMServer.list
-ruleset=🇺🇸 美国专属,https://raw.githubusercontent.com/pitfall-a/ruleClash/refs/heads/main/rule/USAexclusive.list
-ruleset=🏫 学校,https://raw.githubusercontent.com/pitfall-a/ruleClash/refs/heads/main/rule/schoolServer.list
-ruleset=🐟 漏网之鱼,https://raw.githubusercontent.com/pitfall-a/ruleClash/refs/heads/main/rule/escapee.list
+ruleset=🎯 全球直连,https://gh-proxy.org/https://raw.githubusercontent.com/pitfall-a/ruleClash/refs/heads/main/rule/globalDirect.list
+ruleset=Ⓜ️ 微软服务,https://gh-proxy.org/https://raw.githubusercontent.com/pitfall-a/ruleClash/refs/heads/main/rule/microsoft.list
+ruleset=🛑 广告拦截,https://gh-proxy.org/https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanAD.list
+ruleset=🌍 国外媒体,https://gh-proxy.org/https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyMedia.list
+ruleset=🌏 国内媒体,https://gh-proxy.org/https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaMedia.list
+ruleset=📲 电报信息,https://gh-proxy.org/https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Telegram.list
+ruleset=🔰 节点选择,https://gh-proxy.org/https://raw.githubusercontent.com/pitfall-a/ruleClash/refs/heads/main/rule/nodeSelect.list
+ruleset=🍎 苹果服务,https://gh-proxy.org/https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Apple.list
+ruleset=💬 AI,https://gh-proxy.org/https://raw.githubusercontent.com/pitfall-a/ruleClash/refs/heads/main/rule/LLMServer.list
+ruleset=🇺🇸 美国专属,https://gh-proxy.org/https://raw.githubusercontent.com/pitfall-a/ruleClash/refs/heads/main/rule/USAexclusive.list
+ruleset=🏫 学校,https://gh-proxy.org/https://raw.githubusercontent.com/pitfall-a/ruleClash/refs/heads/main/rule/schoolServer.list
+ruleset=🐟 漏网之鱼,https://gh-proxy.org/https://raw.githubusercontent.com/pitfall-a/ruleClash/refs/heads/main/rule/escapee.list
 ;设置规则标志位
 
 ;设置分组标志位
