Add WireGuard ruleset and custom proxy group

--- a/config.ini
+++ b/config.ini
@@ -7,6 +7,7 @@
 ;AI-为非openai的网址
 
 ;设置规则标志位
+ruleset=🏠 WireGuard,https://gh-proxy.org/https://raw.githubusercontent.com/pitfall-a/ruleClash/refs/heads/main/rule/WireGuard.list
 ruleset=🎯 全球直连,https://gh-proxy.org/https://raw.githubusercontent.com/pitfall-a/ruleClash/refs/heads/main/rule/globalDirect.list
 ruleset=Ⓜ️ 微软服务,https://gh-proxy.org/https://raw.githubusercontent.com/pitfall-a/ruleClash/refs/heads/main/rule/microsoft.list
 ruleset=🛑 广告拦截,https://gh-proxy.org/https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanAD.list
@@ -32,6 +33,7 @@ custom_proxy_group=📲 电报信息`select`[]🔰 节点选择`[]🎯 全球直
 custom_proxy_group=🍎 苹果服务`select`[]🔰 节点选择`[]🎯 全球直连`[]♻️ 自动选择`[]DIRECT
 custom_proxy_group=🇺🇸 美国专属`select`.*美国.*
 custom_proxy_group=🏫 学校`select`[]DIRECT
+custom_proxy_group=🏠 WireGuard`select`.*WireGuard.*
 custom_proxy_group=🎯 全球直连`select`[]DIRECT
 custom_proxy_group=🛑 广告拦截`select`[]REJECT`[]DIRECT
 custom_proxy_group=🐟 漏网之鱼`select`[]🔰 节点选择`[]🎯 全球直连`[]♻️ 自动选择`.*`[]DIRECT
